<resources>
    <string name="app_name">PickWhich</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="application_id">YG0KEXGqTmDujMdgQkdxGkc1TkLNt0TV0RJRjiyR</string>
    <string name="client_id">C9uc54imuoNSyAyFl3EwiAdCFxjUoKOmSAquEo0v</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="ok">Ok</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="dont_have_an_account">I don\'t have an Account</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_phone_number">Phone Number</string>
    <string name="error_passwords_must_match">Passwords must match</string>
    <string name="error_invalid_username">Invalid Username</string>
    <string name="error_invalid_phone_number">Invalid Phone Number</string>
    <string name="logout">Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="request_permission">PickWhich needs camera access</string>
    <string name="camera_error">This device is not compatible with the camea API</string>
</resources>
